--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar *ngIf="mostrarNavbar"></app-navbar>
 
 <div class="container mt-4">
+  <h1>Angular está funcionando</h1>
   <router-outlet></router-outlet>
 </div>
